# ai_experiment

./: .gitignore  .mcp.json  GEMINI.md  README.md  claude.md  package-lock.json
.claude/: settings.local.json
.playwright-mcp/: job-detail-snapshot.md
104/: .gitignore  104_auto_apply.js  104_auto_apply_complete.js  104_auto_apply_gemini.js  104_auto_apply_target.js  104_full_automation.js  CREDENTIAL_CLEANUP_REPORT.md  DOCUMENTATION_INDEX.md  FILES_OVERVIEW.md  GEMINI_CLI_INSTRUCTIONS.md  LEARNINGS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README_104_AUTOMATION.md  TOTAL_RESULTS.txt  apply_single_slow.js  automation_results_2026-03-02.md  automation_results_run2.txt  automation_results_run3.txt  automation_results_run4.txt  automation_results_run5.txt  automation_results_run6.txt  note.md  package-lock.json  package.json  run_2000_job_applications.js  run_automation.md  run_batch.txt  step.txt  test_automation.js
LangChain_poc/: .gitignore  README.md  core.py  main.py  pyproject.toml
LangChain_poc/app/: README.md  main.py
LangChain_poc/app/templates/: index.html
LangChain_poc/app2/: README.md  main.py
LangChain_poc/app2/templates/: index.html
LangChain_poc/examples/: chat.py  critique.py  multi_step.py  parallel.py  router.py
LangGraph_poc/app1/ticket-system/: README.md  demo.py  graph.py  main.py  pyproject.toml  server.py
LangGraph_poc/app1/ticket-system/graph/: __init__.py  nodes.py  pipeline.py  state.py
LangGraph_poc/app1/ticket-system/models/: ticket.py
LangGraph_poc/app1/ticket-system/routers/: graph_router.py  tickets.py
LangGraph_poc/app1/ticket-system/scripts/: seed_tickets.py
LangGraph_poc/app1/ticket-system/services/: ticket_service.py
LangGraph_poc/app1/ticket-system/tests/: test_api.py  test_models.py  test_nodes.py  test_state.py  test_ticket_service.py
LangGraph_poc/app1/ticket-system/tools/: pdf_export.py  web_search.py
LangGraph_poc/app1/ticket-system/ui/: index.html
LangGraph_poc/app1/ticket-system/utils/: llm.py  logger.py
LangGraph_poc/app2/: CLAUDE.md  IMPROVEMENTS.md  README.md  db.py  history.db  main.py  mock_data.py  pyproject.toml  seed_rag.py  test_mock.py
LangGraph_poc/app2/agent/: graph.py  nodes.py  retriever.py  state.py  templates.py
LangGraph_poc/app2/chroma_db/: chroma.sqlite3
LangGraph_poc/app2/doc/: req.md  system_design.md
LangGraph_poc/app2/static/: history.html  index.html  style.css  templates.html
LangGraph_poc/app2/tests/: test_nodes.py
LangGraph_poc/app3/: PRODUCT_IMPROVEMENTS.md  README.md  db.py  main.py  pyproject.toml
LangGraph_poc/app3/agent/: graph.py  nodes.py  prompts.py  state.py
LangGraph_poc/app3/doc/: improvements.md  system_design.md
LangGraph_poc/app3/static/: app.js  history.html  index.html  style.css
LangGraph_poc/app3/tests/: test_nodes.py
LangGraph_poc/app4/: .env.example  .gitignore  README.md  main.py  pyproject.toml
LangGraph_poc/app4/agent/: graph.py  nodes.py  state.py
LangGraph_poc/app4/doc/: DESIGN.md
LangGraph_poc/app4/models/: ollama_client.py
LangGraph_poc/app4/rag/: embeddings.py  ingest.py  retriever.py
LangGraph_poc/app4/static/: index.html
LangGraph_poc/app5/: CLAUDE.md  README.md  main.py  pyproject.toml  test_e2e.py
LangGraph_poc/app5/agent/: graph.py  state.py
LangGraph_poc/app5/chroma_db/: chroma.sqlite3
LangGraph_poc/app5/data/: engineering_handbook.txt  hr_policy.txt
LangGraph_poc/app5/rag/: chunkers.py  evaluator.py  ingest.py  query_transform.py  rerank.py
LangGraph_poc/app5/static/: index.html  viz.html
LangGraph_poc/app5/uploads/: product_faq.txt  test.txt
LlamaIndex_poc/app2/: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
LlamaIndex_poc/app2/data/: sample.txt
LlamaIndex_poc/app2/demos/: agent_workflow.py  doc_workflow.py  metadata_filter.py  ocr_parse.py  persistence.py  react_agent.py  reranking.py  router.py  sub_question.py
a_scrapper/: README.md  scrapper_v1.py
adk-python-dev/: README.md
agent/: README.md
agent_sysem/agent_team_openai/: README.md  README_ZH.md  pyproject.toml
agent_sysem/agent_team_openai/agent_team/: __init__.py  agents.py  cli.py  job.py  logger.py  orchestrator.py  patterns.py  router.py
agent_sysem/model_tiering/: README.md  example.py  main.py  pyproject.toml
agent_sysem/model_tiering_openai/: .env.example  .gitignore  COMMANDS.md  DEMO_GUIDE.md  EXAMPLES.md  FILE_LISTING.txt  PROJECT_SUMMARY.txt  README.md  README.zh-TW.md  SETUP.md  example.py  examples_advanced.py  examples_quick_reference.py  examples_realworld.py  main.py  pyproject.toml
ai_eng/: README.md
ai_eng/LangChain_demo_1/: README.md  advanced_agents.py  advanced_memory.py  advanced_rag.py  advanced_streaming.py  advanced_structured.py  main.py  pyproject.toml
crewAI_poc/app1/: .env.example  .gitignore  README.md  pyproject.toml
crewAI_poc/app1/src/: agents.py  crew.py  main.py  tasks.py
crewAI_poc/app3/: .gitignore  README.md  pyproject.toml
crewAI_poc/app3/src/example1_flow/: flow.py  main.py
crewAI_poc/app3/src/example2_memory/: agents.py  crew.py  main.py  tasks.py
crewAI_poc/app3/src/example3_guardrails/: agents.py  crew.py  main.py  tasks.py
ml_ops/data_version_system/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ml_ops/data_version_system/dvs/: __init__.py  __main__.py  cli.py  core.py  store.py
ml_ops/ml_flow/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ml_ops/ml_flow/mlflow_poc/: __init__.py  train.py  train_hyperopt.py  train_multimodel.py  train_regression.py
ml_ops/ml_profiler/: .gitignore  Dockerfile  README.md  docker-compose.yml  mlprofiler.db  pyproject.toml
ml_ops/ml_profiler/src/ml_profiler/: __init__.py  cli.py  dashboard.py  db.py  models.py  profiler.py
rag_poc/nb/: .env.example  01_RAG基礎概念與完整流程.ipynb  02_Chunking文字切塊策略.ipynb  03_進階RAG_混合搜索與重排序.ipynb  04_RAG評估框架.ipynb  05_Query轉換技術.ipynb  09_多智能體系統_LangGraph.ipynb  11_可觀測性與追蹤.ipynb  14_案例_企業內部助理.ipynb  15_案例_企業知識管理系統.ipynb  RAG_test_2.ipynb  pyproject.toml
(+591 files in other folders)
