[project]
name = "app2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
