[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-team"
version = "0.1.0"
description = "Specialized agent orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent-team = "agent_team.cli:main"

[tool.uv]
package = true
