[project]
name = "crewai-expert-examples"
version = "0.1.0"
description = "Expert-level CrewAI patterns: Flow, Memory, Guardrails & Callbacks"
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "python-dotenv>=1.0.0",
    "onnxruntime>=1.19.0,<1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
