[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-version-system"
version = "0.1.0"
description = "Mini dataset and experiment lineage (POC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dvs = "dvs.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["dvs"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = ["ruff>=0.8.0"]
