[project]
name = "ml-profiler"
version = "0.1.0"
description = "Mini ML Profiler - Profile PyTorch models and visualize performance metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "streamlit>=1.30.0",
    "click>=8.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ml-profiler = "ml_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_profiler"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
