[project]
name = "ml-profiler"
version = "0.1.0"
description = "Mini ML Profiler - Profile PyTorch models and visualize performance metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]

[project.scripts]
ml-profiler = "ml_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_profiler"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
